clusters/home/apps/miniflux/00-namespace.yml
apiVersion: v1
# This is a comment for GitOps
kind: Namespace
metadata:
  name: miniflux
  labels:
    app: miniflux
